src/test/ui/type-alias-impl-trait/issue-90400-2.stderr
error[E0277]: the trait bound `B: Bar` is not satisfied
  --> $DIR/issue-90400-2.rs:25:9
   |
LL |         MyBaz(bar)
   |         ^^^^^^^^^^ the trait `Bar` is not implemented for `B`
   |
note: required for `MyBaz<B>` to implement `Baz`
  --> $DIR/issue-90400-2.rs:30:14
   |
LL | impl<B: Bar> Baz for MyBaz<B> {
   |              ^^^     ^^^^^^^^
help: consider restricting type parameter `B`
   |
LL |     type FooFn<B: Bar> = impl Baz;
   |                 +++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
